Black formatting updates

--- a/scripts/main.ipynb
+++ b/scripts/main.ipynb
@@ -44,6 +44,7 @@
     "import time\n",
     "import pyodbc\n",
     "import os\n",
+    "\n",
     "# import pandas as pd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -85,14 +86,20 @@
     "\n",
     "year = [2020, 2019, 2018, 2017, 2016, 2015]\n",
     "\n",
-    "connection_string = (\"DRIVER=\"+sql_driver\n",
-    "                     +\";SERVER=\"+sql_server_16\n",
-    "                     +\";DATABASE=\"+sql_database\n",
-    "                     +\";UID=\"+sql_username\n",
-    "                     +\";PWD=\"+sql_password)\n",
+    "connection_string = (\n",
+    "    \"DRIVER=\"\n",
+    "    + sql_driver\n",
+    "    + \";SERVER=\"\n",
+    "    + sql_server_16\n",
+    "    + \";DATABASE=\"\n",
+    "    + sql_database\n",
+    "    + \";UID=\"\n",
+    "    + sql_username\n",
+    "    + \";PWD=\"\n",
+    "    + sql_password\n",
+    ")\n",
     "# cxn = pyodbc.connect(connection_string)\n",
-    "connection_url = URL.create(\"mssql+pyodbc\", \n",
-    "                            query={\"odbc_connect\": connection_string})\n",
+    "connection_url = URL.create(\"mssql+pyodbc\", query={\"odbc_connect\": connection_string})\n",
     "engine = create_engine(connection_url)\n",
     "conn = engine.connect()\n",
     "\n",
@@ -148,8 +155,11 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
+    "\n",
     "%matplotlib inline\n",
-    "weekly_stats.sort_values([\"season.year\", \"week.sequence\", \"team.id\", \"player.id\"], inplace=True)"
+    "weekly_stats.sort_values(\n",
+    "    [\"season.year\", \"week.sequence\", \"team.id\", \"player.id\"], inplace=True\n",
+    ")"
    ]
   },
   {
@@ -159,19 +169,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "variables = [\"off.snaps\", \"total_fan_pts.half.kick_yrds\"] \n",
+    "variables = [\"off.snaps\", \"total_fan_pts.half.kick_yrds\"]\n",
     "\n",
     "position = [\"QB\", \"RB\", \"WR\", \"TE\"]\n",
     "\n",
     "status_cats = [\"date1.status\", \"date2.status\", \"date3.status\", \"game.status\"]\n",
     "\n",
-    "injury_cats = [\"head\", \"face\", \"neck\", \"shoulder\",   \"upper_arm\", \"elbow\", \"forearm\", \"wrist\", \"hand_finger\", \"thumb\", \"back\", \"chest\", \"abdomen\", \"hip\",\n",
-    "               \"groin\", \"quadricep\", \"hamstring\", \"thigh\", \"knee\", \"lower_leg\", \"achilles\",   \"ankle\", \"foot\", \"toe\", \"illness\"]\n",
+    "injury_cats = [\n",
+    "    \"head\",\n",
+    "    \"face\",\n",
+    "    \"neck\",\n",
+    "    \"shoulder\",\n",
+    "    \"upper_arm\",\n",
+    "    \"elbow\",\n",
+    "    \"forearm\",\n",
+    "    \"wrist\",\n",
+    "    \"hand_finger\",\n",
+    "    \"thumb\",\n",
+    "    \"back\",\n",
+    "    \"chest\",\n",
+    "    \"abdomen\",\n",
+    "    \"hip\",\n",
+    "    \"groin\",\n",
+    "    \"quadricep\",\n",
+    "    \"hamstring\",\n",
+    "    \"thigh\",\n",
+    "    \"knee\",\n",
+    "    \"lower_leg\",\n",
+    "    \"achilles\",\n",
+    "    \"ankle\",\n",
+    "    \"foot\",\n",
+    "    \"toe\",\n",
+    "    \"illness\",\n",
+    "]\n",
     "\n",
     "alpha = 0.05\n",
     "\n",
-    "hypothesis_results = {2: \"Reject the null: There is significance between injury status/injury and fantasy production.\".upper(),\n",
-    "                      1: \"Reject the null: There is significance between injury status/injury and offense snap counts.\".upper()}\n"
+    "hypothesis_results = {\n",
+    "    2: \"Reject the null: There is significance between injury status/injury and fantasy production.\".upper(),\n",
+    "    1: \"Reject the null: There is significance between injury status/injury and offense snap counts.\".upper(),\n",
+    "}"
    ]
   },
   {
@@ -181,7 +218,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hypothesis_1 = weekly_stats[(weekly_stats[\"played\"] >= 1) & (weekly_stats[\"off.snaps\"] >= 15)]"
+    "hypothesis_1 = weekly_stats[\n",
+    "    (weekly_stats[\"played\"] >= 1) & (weekly_stats[\"off.snaps\"] >= 15)\n",
+    "]"
    ]
   },
   {
@@ -196,58 +235,66 @@
     "for pos in position:\n",
     "    for status_day in status_cats:\n",
     "        for injury in injury_cats:\n",
-    "                \n",
+    "\n",
     "            hypothesis_1_full = hypothesis_1[\n",
     "                (\n",
-    "                    (hypothesis_1[status_day].isnull()) \n",
+    "                    (hypothesis_1[status_day].isnull())\n",
     "                    | (hypothesis_1[status_day] == \"Full\")\n",
-    "                ) \n",
+    "                )\n",
     "                & (hypothesis_1[\"player.position\"] == pos)\n",
     "            ]\n",
     "\n",
     "            hypothesis_1_status = hypothesis_1[\n",
     "                ~(\n",
-    "                    (hypothesis_1[status_day].isnull()) \n",
+    "                    (hypothesis_1[status_day].isnull())\n",
     "                    | (hypothesis_1[status_day] == \"Full\")\n",
-    "                ) \n",
+    "                )\n",
     "                & (hypothesis_1[\"player.position\"] == pos)\n",
     "                & (hypothesis_1[injury] > 0)\n",
     "            ]\n",
     "\n",
     "            try:\n",
-    "                p_mannwhiteyu_snaps = stats.mannwhitneyu(hypothesis_1_full[variables[0]], hypothesis_1_status[variables[0]])[1]\n",
+    "                p_mannwhiteyu_snaps = stats.mannwhitneyu(\n",
+    "                    hypothesis_1_full[variables[0]], hypothesis_1_status[variables[0]]\n",
+    "                )[1]\n",
     "                if p_mannwhiteyu_snaps > alpha:\n",
     "                    pass\n",
     "                elif p_mannwhiteyu_snaps <= alpha:\n",
-    "                    print(pos, \n",
-    "                          injury.upper(), \n",
-    "                          status_day.upper(), \n",
-    "                          \"Snaps\", \n",
-    "                          hypothesis_results[1], \n",
-    "                          \"p_value = \"+str(p_mannwhiteyu_snaps), \n",
-    "                          \"No designation Snaps:\",\n",
-    "                          len(hypothesis_1_full[variables[0]]),\n",
-    "                          \"Designation Snaps:\",\n",
-    "                          len(hypothesis_1_status[variables[0]]),\n",
-    "                          \"\\n\",\n",
-    "                          sep=\"\\n\")\n",
+    "                    print(\n",
+    "                        pos,\n",
+    "                        injury.upper(),\n",
+    "                        status_day.upper(),\n",
+    "                        \"Snaps\",\n",
+    "                        hypothesis_results[1],\n",
+    "                        \"p_value = \" + str(p_mannwhiteyu_snaps),\n",
+    "                        \"No designation Snaps:\",\n",
+    "                        len(hypothesis_1_full[variables[0]]),\n",
+    "                        \"Designation Snaps:\",\n",
+    "                        len(hypothesis_1_status[variables[0]]),\n",
+    "                        \"\\n\",\n",
+    "                        sep=\"\\n\",\n",
+    "                    )\n",
     "\n",
-    "                p_mannwhiteyu_fp = stats.mannwhitneyu(hypothesis_1_full[variables[1]], hypothesis_1_status[variables[1]])[1]\n",
+    "                p_mannwhiteyu_fp = stats.mannwhitneyu(\n",
+    "                    hypothesis_1_full[variables[1]], hypothesis_1_status[variables[1]]\n",
+    "                )[1]\n",
     "                if p_mannwhiteyu_fp > alpha:\n",
     "                    pass\n",
     "                elif p_mannwhiteyu_fp <= alpha:\n",
-    "                    print(pos, \n",
-    "                          injury.upper(), \n",
-    "                          status_day.upper(), \n",
-    "                          \"FP\", \n",
-    "                          hypothesis_results[2], \n",
-    "                          \"p_value = \"+str(p_mannwhiteyu_fp), \n",
-    "                          \"No designation FP:\",\n",
-    "                          len(hypothesis_1_full[variables[1]]),\n",
-    "                          \"Designation FP:\",\n",
-    "                          len(hypothesis_1_status[variables[1]]),\n",
-    "                          \"\\n\",\n",
-    "                          sep=\"\\n\")\n",
+    "                    print(\n",
+    "                        pos,\n",
+    "                        injury.upper(),\n",
+    "                        status_day.upper(),\n",
+    "                        \"FP\",\n",
+    "                        hypothesis_results[2],\n",
+    "                        \"p_value = \" + str(p_mannwhiteyu_fp),\n",
+    "                        \"No designation FP:\",\n",
+    "                        len(hypothesis_1_full[variables[1]]),\n",
+    "                        \"Designation FP:\",\n",
+    "                        len(hypothesis_1_status[variables[1]]),\n",
+    "                        \"\\n\",\n",
+    "                        sep=\"\\n\",\n",
+    "                    )\n",
     "            except:\n",
     "                continue"
    ]
@@ -261,58 +308,60 @@
    "source": [
     "for status_day in status_cats:\n",
     "\n",
-    "        hypothesis_1_full = hypothesis_1[\n",
-    "            (\n",
-    "                (hypothesis_1[status_day].isnull()) \n",
-    "                | (hypothesis_1[status_day] == \"Full\")\n",
-    "            ) \n",
-    "        ]\n",
+    "    hypothesis_1_full = hypothesis_1[\n",
+    "        ((hypothesis_1[status_day].isnull()) | (hypothesis_1[status_day] == \"Full\"))\n",
+    "    ]\n",
     "\n",
-    "        hypothesis_1_status = hypothesis_1[\n",
-    "            # (\n",
-    "            #     (hypothesis_1[status_day] == \"Questionable\") \n",
-    "            #     | (hypothesis_1[status_day] == \"Doubtful\") \n",
-    "            #     | (hypothesis_1[status_day] == \"Limited\") \n",
-    "            #     | (hypothesis_1[status_day] == \"DNP\")\n",
-    "            # )\n",
-    "            ~(\n",
-    "                (hypothesis_1[status_day].isnull()) \n",
-    "                | (hypothesis_1[status_day] == \"Full\")\n",
-    "            ) \n",
-    "        ]\n",
+    "    hypothesis_1_status = hypothesis_1[\n",
+    "        # (\n",
+    "        #     (hypothesis_1[status_day] == \"Questionable\")\n",
+    "        #     | (hypothesis_1[status_day] == \"Doubtful\")\n",
+    "        #     | (hypothesis_1[status_day] == \"Limited\")\n",
+    "        #     | (hypothesis_1[status_day] == \"DNP\")\n",
+    "        # )\n",
+    "        ~((hypothesis_1[status_day].isnull()) | (hypothesis_1[status_day] == \"Full\"))\n",
+    "    ]\n",
     "\n",
-    "        try:\n",
-    "            p_mannwhiteyu_snaps = stats.mannwhitneyu(hypothesis_1_full[variables[0]], hypothesis_1_status[variables[0]])[1]\n",
-    "            if p_mannwhiteyu_snaps > alpha:\n",
-    "                pass\n",
-    "            elif p_mannwhiteyu_snaps <= alpha:\n",
-    "                print(status_day.upper(), \n",
-    "                      \"Snaps\", \n",
-    "                      hypothesis_results[1], \n",
-    "                      \"p_value = \"+str(p_mannwhiteyu_snaps), \n",
-    "                      \"No designation Snaps:\",\n",
-    "                      len(hypothesis_1_full[variables[0]]),\n",
-    "                      \"Designation Snaps:\",\n",
-    "                      len(hypothesis_1_status[variables[0]]),\n",
-    "                      \"\\n\",\n",
-    "                      sep=\"\\n\")\n",
+    "    try:\n",
+    "        p_mannwhiteyu_snaps = stats.mannwhitneyu(\n",
+    "            hypothesis_1_full[variables[0]], hypothesis_1_status[variables[0]]\n",
+    "        )[1]\n",
+    "        if p_mannwhiteyu_snaps > alpha:\n",
+    "            pass\n",
+    "        elif p_mannwhiteyu_snaps <= alpha:\n",
+    "            print(\n",
+    "                status_day.upper(),\n",
+    "                \"Snaps\",\n",
+    "                hypothesis_results[1],\n",
+    "                \"p_value = \" + str(p_mannwhiteyu_snaps),\n",
+    "                \"No designation Snaps:\",\n",
+    "                len(hypothesis_1_full[variables[0]]),\n",
+    "                \"Designation Snaps:\",\n",
+    "                len(hypothesis_1_status[variables[0]]),\n",
+    "                \"\\n\",\n",
+    "                sep=\"\\n\",\n",
+    "            )\n",
     "\n",
-    "            p_mannwhiteyu_fp = stats.mannwhitneyu(hypothesis_1_full[variables[1]], hypothesis_1_status[variables[1]])[1]\n",
-    "            if p_mannwhiteyu_fp > alpha:\n",
-    "                pass\n",
-    "            elif p_mannwhiteyu_fp <= alpha:\n",
-    "                print(status_day.upper(), \n",
-    "                      \"FP\", \n",
-    "                      hypothesis_results[2], \n",
-    "                      \"p_value = \"+str(p_mannwhiteyu_fp), \n",
-    "                      \"No designation FP:\",\n",
-    "                      len(hypothesis_1_full[variables[1]]),\n",
-    "                      \"Designation FP:\",\n",
-    "                      len(hypothesis_1_status[variables[1]]),\n",
-    "                      \"\\n\",\n",
-    "                      sep=\"\\n\")\n",
-    "        except:\n",
-    "            continue"
+    "        p_mannwhiteyu_fp = stats.mannwhitneyu(\n",
+    "            hypothesis_1_full[variables[1]], hypothesis_1_status[variables[1]]\n",
+    "        )[1]\n",
+    "        if p_mannwhiteyu_fp > alpha:\n",
+    "            pass\n",
+    "        elif p_mannwhiteyu_fp <= alpha:\n",
+    "            print(\n",
+    "                status_day.upper(),\n",
+    "                \"FP\",\n",
+    "                hypothesis_results[2],\n",
+    "                \"p_value = \" + str(p_mannwhiteyu_fp),\n",
+    "                \"No designation FP:\",\n",
+    "                len(hypothesis_1_full[variables[1]]),\n",
+    "                \"Designation FP:\",\n",
+    "                len(hypothesis_1_status[variables[1]]),\n",
+    "                \"\\n\",\n",
+    "                sep=\"\\n\",\n",
+    "            )\n",
+    "    except:\n",
+    "        continue"
    ]
   },
   {
@@ -434,7 +483,7 @@
     "\n",
     "#     except:\n",
     "#         return \"background-color: ''\"\n",
-    "    \n",
+    "\n",
     "# corr.style.format(precision=3).applymap(background_pandas).to_excel(\"correlations.xlsx\", engine=\"openpyxl\")"
    ]
   }
