--- a/scripts/mysportsfeeds.ipynb
+++ b/scripts/mysportsfeeds.ipynb
@@ -45,11 +45,11 @@
     "#     for c in cols:\n",
     "#         if \"game.\" in c or \"player.\" in c or \"team.\" in c or \"snapCounts\" in c:\n",
     "#             not_drop.append(c)\n",
-    "            \n",
+    "\n",
     "#     snaps = df[not_drop]\n",
     "\n",
     "#     time.sleep(5)\n",
-    "    \n",
+    "\n",
     "#     return snaps\n",
     "\n",
     "# def all_snaps(seasons, weeks):\n",
@@ -59,7 +59,7 @@
     "#         for w in weeks:\n",
     "#             snaps = snaps_api(s, w)\n",
     "#             final_df = pd.concat([snaps, final_df])\n",
-    "            \n",
+    "\n",
     "#     print(time.time()-start)\n",
     "#     return final_df\n",
     "\n",
@@ -119,14 +119,20 @@
     "\n",
     "year = [2020, 2019, 2018, 2017, 2016]\n",
     "\n",
-    "connection_string = (\"DRIVER=\"+sql_driver\n",
-    "                     +\";SERVER=\"+sql_server_16\n",
-    "                     +\";DATABASE=\"+sql_database\n",
-    "                     +\";UID=\"+sql_username\n",
-    "                     +\";PWD=\"+sql_password)\n",
+    "connection_string = (\n",
+    "    \"DRIVER=\"\n",
+    "    + sql_driver\n",
+    "    + \";SERVER=\"\n",
+    "    + sql_server_16\n",
+    "    + \";DATABASE=\"\n",
+    "    + sql_database\n",
+    "    + \";UID=\"\n",
+    "    + sql_username\n",
+    "    + \";PWD=\"\n",
+    "    + sql_password\n",
+    ")\n",
     "# cxn = pyodbc.connect(connection_string)\n",
-    "connection_url = URL.create(\"mssql+pyodbc\", \n",
-    "                            query={\"odbc_connect\": connection_string})\n",
+    "connection_url = URL.create(\"mssql+pyodbc\", query={\"odbc_connect\": connection_string})\n",
     "engine = create_engine(connection_url)\n",
     "conn = engine.connect()\n",
     "\n",
@@ -146,66 +152,85 @@
    },
    "outputs": [],
    "source": [
-    "snaps_df = pd.read_sql_table(\"playerSnaps\",  con=conn)\n",
+    "snaps_df = pd.read_sql_table(\"playerSnaps\", con=conn)\n",
     "schedule = pd.read_sql_table(\"schedule\", con=conn)\n",
-    "snaps_df = snaps_df.replace({\"team\": {\n",
-    "    \"GNB\": \"GB\", \"JAX\": \"JAC\", \"KAN\": \"KC\", \n",
-    "    \"LAR\": \"LA\", \"LVR\": \"LV\", \"NOR\": \"NO\", \n",
-    "    \"NWE\": \"NE\", \"SDG\": \"SD\", \"SFO\": \"SF\", \n",
-    "    \"TAM\": \"TB\"\n",
-    "}, \"opp\": {\n",
-    "    \"GNB\": \"GB\", \"JAX\": \"JAC\", \"KAN\": \"KC\", \n",
-    "    \"LAR\": \"LA\", \"LVR\": \"LV\", \"NOR\": \"NO\", \n",
-    "    \"NWE\": \"NE\", \"SDG\": \"SD\", \"SFO\": \"SF\", \n",
-    "    \"TAM\": \"TB\"\n",
-    "}})\n",
-    "snaps_df[\"home.away\"] = snaps_df[\"home.away\"].replace({\"@\": \"away\", \"\": \"home\", np.nan: \"home\"})\n",
-    "snaps_df[\n",
-    "    [\"off.snaps\",\n",
-    "    \"def.snaps\",\n",
-    "    \"st.snaps\"]\n",
-    "] = snaps_df [\n",
-    "    [\"off.snaps\",\n",
-    "    \"def.snaps\",\n",
-    "    \"st.snaps\"]\n",
+    "snaps_df = snaps_df.replace(\n",
+    "    {\n",
+    "        \"team\": {\n",
+    "            \"GNB\": \"GB\",\n",
+    "            \"JAX\": \"JAC\",\n",
+    "            \"KAN\": \"KC\",\n",
+    "            \"LAR\": \"LA\",\n",
+    "            \"LVR\": \"LV\",\n",
+    "            \"NOR\": \"NO\",\n",
+    "            \"NWE\": \"NE\",\n",
+    "            \"SDG\": \"SD\",\n",
+    "            \"SFO\": \"SF\",\n",
+    "            \"TAM\": \"TB\",\n",
+    "        },\n",
+    "        \"opp\": {\n",
+    "            \"GNB\": \"GB\",\n",
+    "            \"JAX\": \"JAC\",\n",
+    "            \"KAN\": \"KC\",\n",
+    "            \"LAR\": \"LA\",\n",
+    "            \"LVR\": \"LV\",\n",
+    "            \"NOR\": \"NO\",\n",
+    "            \"NWE\": \"NE\",\n",
+    "            \"SDG\": \"SD\",\n",
+    "            \"SFO\": \"SF\",\n",
+    "            \"TAM\": \"TB\",\n",
+    "        },\n",
+    "    }\n",
+    ")\n",
+    "snaps_df[\"home.away\"] = snaps_df[\"home.away\"].replace(\n",
+    "    {\"@\": \"away\", \"\": \"home\", np.nan: \"home\"}\n",
+    ")\n",
+    "snaps_df[[\"off.snaps\", \"def.snaps\", \"st.snaps\"]] = snaps_df[\n",
+    "    [\"off.snaps\", \"def.snaps\", \"st.snaps\"]\n",
     "].fillna(0)\n",
-    "snaps_df[\n",
-    "    [\"off.snaps\",\n",
-    "    \"def.snaps\",\n",
-    "    \"st.snaps\"]\n",
-    "] = snaps_df [\n",
-    "    [\"off.snaps\",\n",
-    "    \"def.snaps\",\n",
-    "    \"st.snaps\"]\n",
+    "snaps_df[[\"off.snaps\", \"def.snaps\", \"st.snaps\"]] = snaps_df[\n",
+    "    [\"off.snaps\", \"def.snaps\", \"st.snaps\"]\n",
     "].replace(\"\", 0)\n",
-    "snaps_df[\n",
-    "    [\"off.snaps\", \n",
-    "    \"def.snaps\", \n",
-    "    \"st.snaps\"]\n",
-    "] = snaps_df[\n",
-    "    [\"off.snaps\", \n",
-    "    \"def.snaps\", \n",
-    "    \"st.snaps\"]\n",
+    "snaps_df[[\"off.snaps\", \"def.snaps\", \"st.snaps\"]] = snaps_df[\n",
+    "    [\"off.snaps\", \"def.snaps\", \"st.snaps\"]\n",
     "].astype(int)\n",
     "snaps_df[\"season\"] = snaps_df[\"season\"].astype(str)\n",
     "\n",
     "replace = [\" III\", \" II\", \" Sr.\", \" Jr.\", \" Jr\", \" Sr\"]\n",
-    "snaps_df[\"player_name\"] = snaps_df[\"player_name\"].str.replace(\"|\".join([re.escape(s) for s in replace]), \"\", regex=True)\n",
+    "snaps_df[\"player_name\"] = snaps_df[\"player_name\"].str.replace(\n",
+    "    \"|\".join([re.escape(s) for s in replace]), \"\", regex=True\n",
+    ")\n",
     "snaps_df = snaps_df.drop_duplicates()\n",
-    "snaps_df = snaps_df.merge(schedule,\n",
-    "                         how=\"left\",\n",
-    "                         left_on=[\"team\", \"home.away\", \"opp\", \"season\"],\n",
-    "                         right_on=[\"game.team.alias\", \"home.away\", \"game.opp.alias\", \"season.year\"],\n",
-    "                         suffixes=(None, \".merged\"))\n",
+    "snaps_df = snaps_df.merge(\n",
+    "    schedule,\n",
+    "    how=\"left\",\n",
+    "    left_on=[\"team\", \"home.away\", \"opp\", \"season\"],\n",
+    "    right_on=[\"game.team.alias\", \"home.away\", \"game.opp.alias\", \"season.year\"],\n",
+    "    suffixes=(None, \".merged\"),\n",
+    ")\n",
     "snaps_df = snaps_df[\n",
     "    [\n",
-    "        \"player_url\", \"player_name\", \"game.team.alias\", \"game.team.id\",\n",
-    "        \"home.away\", \"game.opp.alias\", \"game.opp.id\", \"game.id\", \"game.scheduled\",\n",
-    "        \"season.id\", \"season.year\", \"week.id\", \"week.sequence\",\n",
-    "        \"off.snaps\", \"def.snaps\", \"st.snaps\"\n",
+    "        \"player_url\",\n",
+    "        \"player_name\",\n",
+    "        \"game.team.alias\",\n",
+    "        \"game.team.id\",\n",
+    "        \"home.away\",\n",
+    "        \"game.opp.alias\",\n",
+    "        \"game.opp.id\",\n",
+    "        \"game.id\",\n",
+    "        \"game.scheduled\",\n",
+    "        \"season.id\",\n",
+    "        \"season.year\",\n",
+    "        \"week.id\",\n",
+    "        \"week.sequence\",\n",
+    "        \"off.snaps\",\n",
+    "        \"def.snaps\",\n",
+    "        \"st.snaps\",\n",
     "    ]\n",
     "]\n",
-    "snaps_df.to_sql(\"playerSnaps\", engine, if_exists=\"replace\", index=False, schema=\"dbo\", chunksize=500)"
+    "snaps_df.to_sql(\n",
+    "    \"playerSnaps\", engine, if_exists=\"replace\", index=False, schema=\"dbo\", chunksize=500\n",
+    ")"
    ]
   },
   {
