--- a/scripts/main.ipynb
+++ b/scripts/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b2528a6d-7b81-4ed6-a55d-938a6e5439db",
    "metadata": {
     "tags": []
@@ -67,44 +67,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "f79b9bf6-1a89-4512-b0a8-8969d90a8f68",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "('08001', '[08001] [Microsoft][ODBC Driver 17 for SQL Server]The client cannot connect to the server because the requested instance was not available. Use SQL Server Configuration Manager to make sure the SQL Server instance is configured correctly.  (0) (SQLDriverConnect)')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\cudde\\OneDrive\\Programing\\Python-Projects\\Fantasy-Sidelines\\scripts\\main.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/cudde/OneDrive/Programing/Python-Projects/Fantasy-Sidelines/scripts/main.ipynb#ch0000001?line=6'>7</a>\u001b[0m \u001b[39m# api_key = os.getenv(\"sportradar_apikey\")\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/cudde/OneDrive/Programing/Python-Projects/Fantasy-Sidelines/scripts/main.ipynb#ch0000001?line=7'>8</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/cudde/OneDrive/Programing/Python-Projects/Fantasy-Sidelines/scripts/main.ipynb#ch0000001?line=8'>9</a>\u001b[0m \u001b[39m# year = [2020, 2019, 2018, 2017, 2016, 2015]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cudde/OneDrive/Programing/Python-Projects/Fantasy-Sidelines/scripts/main.ipynb#ch0000001?line=10'>11</a>\u001b[0m connection_string \u001b[39m=\u001b[39m (\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cudde/OneDrive/Programing/Python-Projects/Fantasy-Sidelines/scripts/main.ipynb#ch0000001?line=11'>12</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mDRIVER=\u001b[39m\u001b[39m{\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cudde/OneDrive/Programing/Python-Projects/Fantasy-Sidelines/scripts/main.ipynb#ch0000001?line=12'>13</a>\u001b[0m     \u001b[39m+\u001b[39m sql_driver\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cudde/OneDrive/Programing/Python-Projects/Fantasy-Sidelines/scripts/main.ipynb#ch0000001?line=21'>22</a>\u001b[0m     \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m;Trusted_Connection=yes;\u001b[39m\u001b[39m\"\u001b[39m    \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cudde/OneDrive/Programing/Python-Projects/Fantasy-Sidelines/scripts/main.ipynb#ch0000001?line=22'>23</a>\u001b[0m )\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/cudde/OneDrive/Programing/Python-Projects/Fantasy-Sidelines/scripts/main.ipynb#ch0000001?line=24'>25</a>\u001b[0m cxn \u001b[39m=\u001b[39m pyodbc\u001b[39m.\u001b[39;49mconnect(connection_string)\n",
+      "\u001b[1;31mOperationalError\u001b[0m: ('08001', '[08001] [Microsoft][ODBC Driver 17 for SQL Server]The client cannot connect to the server because the requested instance was not available. Use SQL Server Configuration Manager to make sure the SQL Server instance is configured correctly.  (0) (SQLDriverConnect)')"
+     ]
+    }
+   ],
    "source": [
     "load_dotenv()\n",
     "sql_driver = os.getenv(\"sql_driver\")\n",
-    "# check IP address for connection timeout errors\n",
-    "sql_server_16 = os.getenv(\"sql_server_16\")\n",
-    "sql_server_17 = os.getenv(\"sql_server_17\")\n",
+    "sql_server = os.getenv(\"sql_server\")\n",
     "sql_database = os.getenv(\"sql_database\")\n",
     "sql_username = os.getenv(\"sql_username\")\n",
     "sql_password = os.getenv(\"sql_password\")\n",
-    "api_key = os.getenv(\"sportradar_apikey\")\n",
+    "# api_key = os.getenv(\"sportradar_apikey\")\n",
     "\n",
-    "year = [2020, 2019, 2018, 2017, 2016, 2015]\n",
+    "# year = [2020, 2019, 2018, 2017, 2016, 2015]\n",
     "\n",
     "connection_string = (\n",
-    "    \"DRIVER=\"\n",
+    "    \"DRIVER={\"\n",
     "    + sql_driver\n",
-    "    + \";SERVER=\"\n",
-    "    + sql_server_16\n",
+    "    + \"};SERVER=\"\n",
+    "    + sql_server\n",
     "    + \";DATABASE=\"\n",
     "    + sql_database\n",
     "    + \";UID=\"\n",
     "    + sql_username\n",
-    "    + \";PWD=\"\n",
+    "    + ';PWD='\n",
     "    + sql_password\n",
+    "    + \";Trusted_Connection=yes;\"    \n",
     ")\n",
-    "# cxn = pyodbc.connect(connection_string)\n",
-    "connection_url = URL.create(\"mssql+pyodbc\", query={\"odbc_connect\": connection_string})\n",
-    "engine = create_engine(connection_url)\n",
-    "conn = engine.connect()\n",
     "\n",
-    "inspector = inspect(engine)\n",
-    "print(inspector.get_table_names())"
+    "cxn = pyodbc.connect(connection_string)\n",
+    "# connection_url = URL.create(\"mssql+pyodbc\", query={\"odbc_connect\": connection_string})\n",
+    "# engine = create_engine(connection_url)\n",
+    "# conn = engine.connect()\n",
+    "\n",
+    "# inspector = inspect(engine)\n",
+    "# print(inspector.get_table_names())"
    ]
   },
   {
@@ -489,8 +501,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "3f3bd980f88f69e2fd291546965fa75d5f36c0f1363297ae15f33f3c8c6da702"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('fantasysidelines.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -504,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
